--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-  "name": "timepad/timepad-sdk-php",
+  "name": "zhorapro/timepad-sdk-php",
   "description": "",
   "keywords": [
     "swagger",
